created user listing api, added some keys and migration on post table and added some key on user resource
